app/tests/fails/panic_return_result.stderr
error: this macro can only be applied to a function that does not return a Result. Signature: Result < Person, String >
  --> tests/fails/panic_return_result.rs:10:44
   |
10 | fn create_person(name: String, age: u8) -> Result<Person, String> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^
